# MiniClaw

./: .gitignore  INSTALL.md  LEARNING.md  README.md  config.example.toml  config.example.yaml  feishu_ws.py  mini_claw.db-shm  mini_claw.db-wal  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  workflow_plan.md
docs/: INSTALL.md  LEARNING.md  WORKSPACE_CONFIGURATION.md  rag_feishu_test.md
mini_claw/: __init__.py  app.py  cli.py  config.py
mini_claw/agent/: context.py  extractor.py  finalizer.py  goal_anchor.py  loop.py  manager.py  observation.py  react_decision.py  react_models.py  reflection.py  (+6 more)
plans/: Memory.md  RAG.md  RAG_index.md  RAG补充.md  ReAct.md  优化.md  计划书.md
tests/: test_agent_loop.py  test_agent_loop_hallucination.py  test_agent_loop_progress.py  test_agent_manager.py  test_agent_prelude.py  test_approval_channel_isolation.py  test_approval_persistence.py  test_blacklist.py  test_chain_detector_integration.py  test_chain_detector_session.py  test_channel_manager.py  test_chat_search.py  test_concurrency.py  test_config_memory_normalization.py  test_cs4_keyword_class.py  test_current_time_tool.py  test_feishu_channel.py  test_feishu_webhook.py  test_gateway_memory_command.py  test_goal_anchor.py  test_hybrid_dedupe.py  test_memory_approve_l3_flow.py  test_open_app_permissions.py  test_open_app_tool.py  test_paths.py  test_permissions.py  test_phase10_complete.py  test_phase10_final.py  test_phase10_knobs.py  test_phase10_wiring.py  test_phase9_acceptance.py  test_phase9_chat_search_features.py  test_phase9_database_migrations.py  test_phase9_isolation_and_workflow.py  test_phase9_maintenance_audit_injector.py  test_phase9_memory_cli_approvals.py  test_phase9_memory_export_approval.py  test_phase9_p01_isolation.py  test_phase9_p03_active_contexts_migration.py  test_plugin_hot_remove.py  (+49 more)
(+99 files in other folders)
