[project]
name = "mini-claw"
version = "0.1.0"
description = "Local-first personal AI Agent assistant with Feishu integration"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]

[project.scripts]
mini-claw = "mini_claw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
