[project]
name = "mini-claw"
version = "0.1.0"
description = "Local-first personal AI Agent assistant with Feishu integration"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]
# Phase 8 M4: vector retrieval (Chroma + local embeddings).
# Heavy deps; opt-in with: pip install -e '.[rag-vector]'
rag-vector = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]
# Phase 8.3.5: code anchors for incremental reindex.
# Opt-in with: pip install -e '.[rag-code]'
rag-code = [
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=0.7",
]

[project.scripts]
mini-claw = "mini_claw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
